Avoid too broad bezel around logo, making it look unaligned. (#31)

--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -196,7 +196,7 @@ blockquote span{
 
 .logo-sprind-2 {
   width: auto;
-  height: 70px;
+  height: 55px;
   padding: 10px;
 }
 
